# Terminus-GFX

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindOpenGLES2.cmake  FindOpenGLES3.cmake
example/: CMakeLists.txt
example/hello_triangle/: CMakeLists.txt  main.cpp
include/: RenderDevice.h  gfx_descs.h  gfx_enums.h  gfx_types.h  render_device.h
include/Direct3D 11/: gfx_types_gl4.h  graphics_types_d3d11.h  render_device_d3d11.h
include/OpenGL/: GLRenderDevice.h
include/gfx/: gfx_descs.h  gfx_device.h  gfx_enums.h  gfx_types.h
include/gfx/d3d11/: d3d11_device.h  d3d11_types.h
include/gfx/gl/: gl_device.h  gl_types.h  glad.h
include/gfx/mtl/: mtl_types.h  mtl_view.h
include/gfx/vk/: vk_device.h
include/gl/: gl_render_device.h  gl_types.h
include/mtl/: MTLCommandBuffer.h  MTLCommandPool.h  MTLDescriptorHeap.h  MTLDescriptorSet.h  MTLFence.h  MTLIndexBuffer.h  MTLInputLayout.h  MTLPipelineState.h  MTLShader.h  MTLStorageBuffer.h  MTLUniformBuffer.h  MTLVertexBuffer.h  gfx_device_mtl.hpp  mtl_macros.h
src/: CMakeLists.txt
src/Direct3D 11/: render_device_d3d11.cpp
src/OpenGL/: GLRenderDevice.cpp
src/d3d11/: d3d11_device.cpp
src/gl/: gl_core_4_5.c  gl_device.cpp  gl_render_device.cpp  glad.c  utility.cpp
src/mtl/: MTLCommandBuffer.mm  gfx_device_mtl.mm  metal_view.m  mtl_device.mm  mtl_view.m
src/vk/: vk_device.cpp
